Use rollup dist bundle instead. Add esm module distribute for rollup ecosystem.

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,11 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "chrome": "58",
-          "ie": "8"
-        }
-      }
-    ]
+    [ "@babel/preset-env", {
+      "modules": false,
+      "loose": true,
+      "useBuiltIns": false,
+	  "targets": { "chrome": "58", "ie": "8" },
+	  "exclude": [ "transform-typeof-symbol", "transform-function-name", "transform-classes" ]
+    } ]
   ]
 }
