--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "files": [
     "src",
     "dist/debug.js",
+    "dist/debug.min.js",
+    "dist/debug.esm.js",
     "LICENSE",
     "README.md"
   ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "contributors": [
     "Nathan Rajlich <nathan@tootallnate.net> (http://n8.io)",
-    "Andrew Rhyne <rhyneandrew@gmail.com>"
+    "Andrew Rhyne <rhyneandrew@gmail.com>",
+    "Allex Wang <allex.wxn@gmail.com> (http://iallex.com)"
   ],
   "license": "MIT",
   "scripts": {
@@ -30,8 +33,7 @@
     "posttest:node": "cat ./coverage/lcov.info | coveralls",
     "pretest:browser": "npm run build",
     "test:browser": "karma start --single-run",
-    "prebuild:debug": "mkdir -p dist && browserify --standalone debug -o dist/debug.es6.js .",
-    "build:debug": "babel -o dist/debug.js dist/debug.es6.js > dist/debug.js",
+    "build:debug": "rollup-worker -c",
     "build:test": "babel -d dist test.js",
     "build": "npm run build:debug && npm run build:test",
     "clean": "rimraf dist coverage"
@@ -43,7 +45,6 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "browserify": "14.4.0",
     "chai": "^3.5.0",
     "concurrently": "^3.1.0",
     "coveralls": "^3.0.2",
@@ -55,9 +56,12 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "rimraf": "^2.5.4",
+    "rollup-plugin-babel": "beta",
+    "rollup-worker": "next",
     "xo": "^0.23.0"
   },
   "main": "./src/index.js",
-  "browser": "./src/browser.js",
-  "unpkg": "./dist/debug.js"
+  "browser": "./dist/debug.js",
+  "unpkg": "./dist/debug.min.js",
+  "module": "./dist/debug.esm.js"
 }
