--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "debug",
-  "version": "4.1.0",
+  "name": "@allex/debug",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/visionmedia/debug.git"
